--- a/proyecto/citapp-api/src/main/resources/application.properties
+++ b/proyecto/citapp-api/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto= create-drop
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization= true
+
+logging.level.root:info
